[package]
name = "kpi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.33", features = ["unstable-locales"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
